spacing issues

--- a/src/components/styles/Partners.scss
+++ b/src/components/styles/Partners.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 100px;
+  padding: 5em;
   margin: 0;
   height: auto;
   max-width: 100vw !important;
@@ -18,6 +18,10 @@
   background-size: cover;
   background-color: #202f3f;
   position: relative;
+}
+
+.backgroundAssets {
+  height: auto;
 }
 
 .partnersLogos {
@@ -58,7 +62,7 @@
   width: 10vw;
   height: auto;
   left: 60.5%;
-  top: 30%;
+  bottom: 48%;
   z-index: 1;
 }
 
@@ -107,12 +111,13 @@
 
   .dotPatternPartnerTop {
     width: 25vw;
-    left: 70%;
-    top: 33%;
+    left: 67%;
+    top: 38%;
   }
 
   .dotPatternPartnerBot {
     width: 25vw;
-    left: 5%;
+    left: 7%;
+    top: 55%;
   }
 }
